2004-07-05  ujwal

	* Added support to drag selection from iTerm window.
	* Added support to specify a bookmark as default.

2004-06-15  fabian

	* Fixed title problem in some web html files
	
2004-05-26  ujwal

	* Added an option to enable/disable Rendezvous.

2004-05-24  ujwal

	* Added support for services.

2004-05-19  ujwal

	* Made horizontal spacing parameter an "int" instead of a "float" since 
	  "float" was making the fonts look blurry. Spacing changes will be 
	  choppier, so we will need to revisit that.

2004-05-17  ujwal

	* Put back in fabian's fix for crash when closing window too fast. 
	  Object de-allocation does work correctly. It just happens when the 
	  next event is processed like a key or mouse event. However, it still 
	  leaves behind a zombie shell process that goes away only when iTerm 
	  is quit.

2004-05-15  fabian

    * Selection now occurs when mouseDown instead of mouseUp.
    
2004-05-11  ujwal
	
	* Added support to set cursor color and cursor text color from applescript.

2004-05-08  ujwal

	* Fixed printing.

2004-05-08  ujwal

	* Re-implemented display update thread using NSThread instead of NSTimer 
	  to avoid posting frequent events on main run loop. Hopefully this 
	  should reduce CPU usage seen on laptops. Also, the thread is called 
	  from the controlling Pseudoterminal instead of in each tab. Thread 
	  updates all tabs in the controlling PseudoTerminal. This should reduce 
	  the number of threads to one per PseudoTerminal.

2004-04-27  fabian

    * Added support for double/triple click and drag to copy.
    * Fixes for shift-to-extend-selection
    * Now Command-selection opens what is selected in a browser.
    
2004-04-26  ujwal
	
	* Fixed resize bug in VT100Screen.

2004-04-24  ujwal

	* Removed some code in PTToolbarController that triggered a 
	  bug in toolbar visibility toggling.
	* Added support for mapping the help key.

2004-04-20  ujwal
