@@ -1,3 +1,8 @@
+2004-07-07  ujwal
+
+	* Reimplemented print-to-ansi feature to use standard printing. Should 
+	  also fix any encoding issues.
+
 2004-07-05  ujwal
 
 	* Added support to drag selection from iTerm window.
